added version, status and download count for Typo3 Extension Repository

--- a/try.html
+++ b/try.html
@@ -324,8 +324,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
   <tr><th> Typo3: </th>
-    <td><img src='/typo3/extension/dt/sh_scoutnet_kalender.svg' alt=''/></td>
-    <td><code>https://img.shields.io/typo3/extension/dt/sh_scoutnet_kalender.svg</code></td>
+    <td><img src='/typo3/extension/downloads/sh_scoutnet_kalender.svg' alt=''/></td>
+    <td><code>https://img.shields.io/typo3/extension/downloads/sh_scoutnet_kalender.svg</code></td>
   </tr>
   <tr><th> SourceForge: </th>
   <td><img src='/sourceforge/dm/sevenzip.svg' alt=''/></td>
@@ -534,6 +534,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/wordpress/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
   </tr>
+  <tr><th> Typo3: </th>
+    <td><img src='/typo3/extension/version/sh_scoutnet_kalender.svg' alt=''/></td>
+    <td><code>https://img.shields.io/typo3/extension/version/sh_scoutnet_kalender.svg</code></td>
+  </tr>
   <tr><th data-keywords='atom'> apm: </th>
   <td><img src='/apm/v/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
@@ -653,6 +657,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='PHP'> Packagist: </th>
     <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
     <td><code>https://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
+  </tr>
+  <tr><th> Typo3: </th>
+    <td><img src='/typo3/extension/status/sh_scoutnet_kalender.svg' alt=''/></td>
+    <td><code>https://img.shields.io/typo3/extension/status/sh_scoutnet_kalender.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
     <td><img src='/npm/l/express.svg' alt=''/></td>
