Disambiguate provider vs package: Package Control
Spent some time trying to figure out how this was supposed to work :P

--- a/index.html
+++ b/index.html
@@ -369,20 +369,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dm/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dm/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dw/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dw/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dd/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dd/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dt/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dt/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
