--- a/try.html
+++ b/try.html
@@ -373,20 +373,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='/packagecontrol/dm/Package%20Control.svg' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
+  <td><img src='/packagecontrol/dm/GitGutter.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='/packagecontrol/dw/Package%20Control.svg' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
+  <td><img src='/packagecontrol/dw/GitGutter.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='/packagecontrol/dd/Package%20Control.svg' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
+  <td><img src='/packagecontrol/dd/GitGutter.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='/packagecontrol/dt/Package%20Control.svg' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
+  <td><img src='/packagecontrol/dt/GitGutter.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg' alt=''/></td>
