Improve CTAN error handling and fix non-svg 404 badges
Fix #921

--- a/try.html
+++ b/try.html
@@ -704,8 +704,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/cpan/l/Config-Augeas.svg</code></td>
   </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
-    <td><img src='/ctan/l/tex.svg' alt='' /></td>
-    <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
+    <td><img src='/ctan/l/novel.svg' alt='' /></td>
+    <td><code>https://img.shields.io/ctan/l/novel.svg</code></td>
   </tr>
   <tr><th> Wheelmap: </th>
     <td><img src='/wheelmap/a/2323004600.svg' alt='' /></td>
