--- a/try.html
+++ b/try.html
@@ -423,9 +423,17 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/npm/v/npm.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/npm.svg</code></td>
   </tr>
+  <tr><th data-keywords='node'> npm (tag): </th>
+  <td><img src='/npm/v/npm/next.svg' alt=''/></td>
+  <td><code>https://img.shields.io/npm/v/npm/next.svg</code></td>
+  </tr>
   <tr><th data-keywords='node'> npm (scoped): </th>
   <td><img src='/npm/v/@cycle/core.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/@cycle/core.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm (scoped with tag): </th>
+  <td><img src='/npm/v/@cycle/core/canary.svg' alt=''/></td>
+  <td><code>https://img.shields.io/npm/v/@cycle/core/canary.svg</code></td>
   </tr>
   <tr><th> node: </th>
   <td><img src='/node/v/gh-badges.svg' alt=''/></td>
