add badges for github last commit date and commit freq

--- a/try.html
+++ b/try.html
@@ -750,6 +750,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub lastcommit' data-doc='githubDoc'> GitHub last commit date: </th>
+    <td><img src='/github/commits/google/skia/last.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/commits/google/skia/last.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub lastcommit' data-doc='githubDoc'> GitHub last commit date branch: </th>
+    <td><img src='/github/commits/google/skia/infra/config/last.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub commits for' data-doc='githubDoc'> GitHub commits for last (week, month, year) </th>
+    <td><img src='/github/stats/google/skia/year.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/stats/google/skia/year.svg</code></td>
+  </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
