--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hr { width: 40%; border-width: 1px 0 0 0; }
 a.photo { text-decoration: none; }
 a.photo>img { padding: 2px; border: 1px solid grey; }
 ul { text-align: left; margin-left: 25%; }
-table { width: 50%; margin: auto; }
+table { min-width: 50%; margin: auto; }
 table.centered > tbody > tr > td:first-child { text-align: right; }
 th, td { text-align: left; }
 h1, h2, h3 { font-style: italic; }
@@ -48,6 +48,11 @@ hr.spacing { border: 0; display: block; height: 3mm; }
 table.badge > tbody > tr > th,
 table.badge > tbody > tr > td > img,
 table.badge > tbody > tr > td > code { cursor: pointer; }
+#copyImg,
+.badge-img img {
+	height: 20px;
+	vertical-align: middle;
+}
 </style>
 
 <main id='main'>
@@ -68,7 +73,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <section id='suggestedBadges'></section>
 
 <h3 id="build"> Build </h3>
-<table class='badge'><tbody>
+<table class='badge badge-img'><tbody>
   <tr><th> Travis: </th>
     <td><img src='https://img.shields.io/travis/rust-lang/rust.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/travis/USER/REPO.svg</code></td>
@@ -369,20 +374,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dm/GitGutter.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dm/GitGutter.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dm/Package%20Control.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dw/GitGutter.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dw/GitGutter.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dw/Package%20Control.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dd/GitGutter.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dd/GitGutter.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dd/Package%20Control.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dt/GitGutter.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dt/GitGutter.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dt/Package%20Control.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
@@ -411,7 +416,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
-  <tr><th data-keywords='cdn cdnjs'> CDNJS: </th>
+  <tr><th data-keywords='cdn cdnjs' data-link='https://cdnjs.com/libraries/jquery'> CDNJS: </th>
   <td><img src='https://img.shields.io/cdnjs/v/jquery.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/cdnjs/v/jquery.svg</code></td>
   </tr>
@@ -791,10 +796,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/libscore/s/jQuery.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
   </tr>
-  <tr><th> Talk.ai: </th>
-    <td><img src='https://img.shields.io/talk/t/9c81ff703b.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
-  </tr>
   <tr><th> Puppet Forge: </th>
     <td><img src='https://img.shields.io/puppetforge/e/camptocamp/openssl.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/puppetforge/e/camptocamp/openssl.svg</code></td>
@@ -901,6 +902,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='https://img.shields.io/amo/stars/dustman.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/amo/stars/dustman.svg</code></td>
+  </tr>
+  <tr><th> Swagger Validator: </th>
+    <td><img src='https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -1025,7 +1030,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </td></tr>
 </tbody></table>
 
-<p>
+<p class='badge-img'>
 <img src='https://img.shields.io/badge/color-brightgreen-brightgreen.svg?maxAge=2592000' alt='brightgreen'/>
 <img src='https://img.shields.io/badge/color-green-green.svg?maxAge=2592000' alt='green'/>
 <img src='https://img.shields.io/badge/color-yellowgreen-yellowgreen.svg?maxAge=2592000' alt='yellowgreen'/>
@@ -1041,7 +1046,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <p>
 The following styles are available (flat is the default as of Feb 1st 2015):
 </p>
-<table><tbody>
+<table class='badge-img'><tbody>
   <tr>
   <td><img src='https://img.shields.io/badge/style-plastic-green.svg?style=plastic&maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/badge/style-plastic-green.svg?style=plastic</code></td>
