--- a/try.html
+++ b/try.html
@@ -169,13 +169,21 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
-  <tr><th> SonarQube Coverage: </th>
-    <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
-    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg</code></td>
+  <tr><th> SonarQube Coverage (API older 5.4): </th>
+    <td><img src='/sonar5.1/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar5.1/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg</code></td>
   </tr>
-  <tr><th> SonarQube Tech Debt: </th>
-    <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg' alt=''/></td>
-    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg</code></td>
+  <tr><th> SonarQube Tech Debt (API older 5.4): </th>
+    <td><img src='/sonar5.1/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar5.1/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg</code></td>
+  </tr>
+  <tr><th> SonarQube Coverage (API since 5.4): </th>
+    <td><img src='/sonar6.3/https/sonarqube.com/com.github.noraui:noraui/coverage.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar6.3/https/sonarqube.com/com.github.noraui:noraui/coverage.svg</code></td>
+  </tr>
+  <tr><th> SonarQube Tech Debt (API since 5.4): </th>
+    <td><img src='/sonar6.3/https/sonarqube.com/com.github.noraui:noraui/tech_debt.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar6.3/https/sonarqube.com/com.github.noraui:noraui/tech_debt.svg</code></td>
   </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
     <td><img src='/teamcity/coverage/bt1242.svg' alt=''/></td>
