--- a/try.html
+++ b/try.html
@@ -855,6 +855,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/docker/automated/jrottenberg/ffmpeg.svg' alt=''/></td>
     <td><code>https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg</code></td>
   </tr>
+  <tr><th data-keywords='docker build status'> Docker Build Status </th>
+    <td><img src='/docker/build/jrottenberg/ffmpeg.svg' alt=''/></td>
+    <td><code>https://img.shields.io/docker/build/jrottenberg/ffmpeg.svg</code></td>
+  </tr>
   <tr><th data-keywords='imagelayers'> ImageLayers Size: </th>
     <td><img src='/imagelayers/image-size/_/ubuntu/latest.svg' alt=''/></td>
     <td><code>https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg</code></td>
