--- a/try.html
+++ b/try.html
@@ -562,9 +562,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/amo/v/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
-  <tr><th> Apple Store: </th>
-    <td><img src='/applestore/v/803453959.svg' alt=''/></td>
-    <td><code>https://img.shields.io/applestore/v/BUNDLE_ID.svg</code></td>
+  <tr><th> Itunes App Store: </th>
+    <td><img src='/itunes/v/803453959.svg' alt=''/></td>
+    <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
   </tr>
 </tbody></table>
 
