iTunes app store version (#840)

--- a/try.html
+++ b/try.html
@@ -583,6 +583,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/amo/v/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
+  <tr><th> Itunes App Store: </th>
+    <td><img src='/itunes/v/803453959.svg' alt=''/></td>
+    <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
