Update index.html with recent changes

--- a/index.html
+++ b/index.html
@@ -374,20 +374,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dm/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dm/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dw/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dw/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dd/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dd/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='sublime'> Package Control: </th>
-  <td><img src='https://img.shields.io/packagecontrol/dt/Package%20Control.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
+  <td><img src='https://img.shields.io/packagecontrol/dt/GitGutter.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/GitGutter.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
@@ -427,6 +427,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='node'> npm (scoped): </th>
   <td><img src='https://img.shields.io/npm/v/@cycle/core.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/@cycle/core.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm (tag): </th>
+  <td><img src='https://img.shields.io/npm/v/npm/next.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/npm/v/npm/next.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm (scoped with tag): </th>
+  <td><img src='https://img.shields.io/npm/v/@cycle/core/canary.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/npm/v/@cycle/core/canary.svg</code></td>
   </tr>
   <tr><th> node: </th>
   <td><img src='https://img.shields.io/node/v/gh-badges.svg?maxAge=2592000' alt=''/></td>
@@ -544,6 +552,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/cpan/v/Config-Augeas.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/cpan/v/Config-Augeas.svg</code></td>
   </tr>
+  <tr><th data-keywords='R'> CRAN: </th>
+  <td><img src='https://img.shields.io/cran/v/devtools.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/cran/v/devtools.svg</code></td>
+  </tr>
+  <tr><th data-keywords='R'> CRAN: </th>
+  <td><img src='https://img.shields.io/cran/l/devtools.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/cran/l/devtools.svg</code></td>
+  </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='https://img.shields.io/ctan/v/tex.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
@@ -567,6 +583,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
   <td><img src='https://img.shields.io/amo/v/dustman.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
+  </tr>
+  <tr><th> Itunes App Store: </th>
+    <td><img src='https://img.shields.io/itunes/v/803453959.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -839,6 +859,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='docker automated build'> Docker Automated build </th>
     <td><img src='https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg</code></td>
+  </tr>
+  <tr><th data-keywords='docker build status'> Docker Build Status </th>
+    <td><img src='https://img.shields.io/docker/build/jrottenberg/ffmpeg.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/docker/build/jrottenberg/ffmpeg.svg</code></td>
   </tr>
   <tr><th data-keywords='imagelayers'> ImageLayers Size: </th>
     <td><img src='https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg?maxAge=2592000' alt=''/></td>
