Add badge for NuGet download count, again.
Switched from SearchAutocompleteService to SearchQueryService as this service also provides download counts.

--- a/try.html
+++ b/try.html
@@ -280,6 +280,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/chocolatey/dt/scriptcs.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
   </tr>
+  <tr><th> NuGet: </th>
+  <td><img src='/nuget/dt/Microsoft.AspNetCore.Mvc.svg' alt=''/></td>
+  <td><code>https://img.shields.io/nuget/dt/Microsoft.AspNetCore.Mvc.svg</code></td>
+  </tr>
+  <tr><th> MyGet: </th>
+  <td><img src='/myget/mongodb/dt/MongoDB.Driver.Core.svg' alt=''/></td>
+  <td><code>https://img.shields.io/myget/mongodb/dt/MongoDB.Driver.Core.svg</code></td>
+  </tr>
+  <tr><th> MyGet tenant: </th>
+  <td><img src='/dotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg' alt=''/></td>
+  <td><code>https://img.shields.iodotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg</code></td>
+  </tr>
   <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='/pypi/dm/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dm/Django.svg</code></td>
