--- a/index.html
+++ b/index.html
@@ -931,6 +931,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg</code></td>
   </tr>
+  <tr><th> Uptime Robot status: </th>
+    <td><img src='https://img.shields.io/uptimerobot/status/u956-afus321g565fghr519.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/status/u956-afus321g565fghr519.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio (30 days): </th>
+    <td><img src='https://img.shields.io/uptimerobot/ratio/u956-afus321g565fghr519/30.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/u956-afus321g565fghr519/30.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
