Fix code review comments

--- a/try.html
+++ b/try.html
@@ -290,7 +290,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
   <tr><th> MyGet tenant: </th>
   <td><img src='/dotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg' alt=''/></td>
-  <td><code>https://img.shields.iodotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg</code></td>
+  <td><code>https://img.shields.io/dotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg</code></td>
   </tr>
   <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='/pypi/dm/Django.svg' alt=''/></td>
