Fix bug in website badge (specifying colours & test + subdirectories was improperly parsed). Allow specifying website name (left part of the badge).

--- a/try.html
+++ b/try.html
@@ -393,8 +393,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='website' data-doc='websiteDoc'> Website: </th>
-    <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
-    <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
+    <td><img src='/website-up-down-green-red-my--website/http/shields.io.svg' alt=''/></td>
+    <td><code>https://img.shields.io/website-up-down-green-red-my--website/http/shields.io.svg</code></td>
   </tr>
   <tr><th data-keywords='cocoapods'> CocoaPods: </th>
     <td><img src='/cocoapods/dt/AFNetworking.svg' alt='' /></td>
@@ -1201,10 +1201,16 @@ is where the current server got started.
       <ul>
         <li>Nothing:
             <code>…/website/…</code></li>
+        <li>Badge label (displayed in the left part of the badge):
+            <code>…/website-label/…</code></li>
         <li>Online and offline text:
             <code>…/website-up-down/…</code></li>
+        <li>Online and offline text, then badge label:
+            <code>…/website-up-down-label/…</code></li>
         <li>Online and offline text, then online and offline colors:
             <code>…/website-up-down-green-orange/…</code></li>
+        <li>Online and offline text, then online and offline colors, then badge label:
+            <code>…/website-up-down-green-orange-label/…</code></li>
       </ul>
       <table class=centered><tbody>
           <tr><td>   Dashes <code>--</code>
@@ -1214,6 +1220,10 @@ is where the current server got started.
           <tr><td>   Underscores <code>__</code>
             </td><td>  →
             </td><td>  <code>_</code> Underscore <br/>
+          </td></tr>
+          <tr><td>   Slashes <code>//</code>
+            </td><td>  →
+            </td><td>  <code>/</code> Slash <br/>
           </td></tr>
           <tr><td>   <code>_</code> or Space <code>&nbsp;</code>
             </td><td>  →
