numberOfDays optional (default 30) for Uptime Robot ratio

--- a/index.html
+++ b/index.html
@@ -935,9 +935,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg</code></td>
   </tr>
-  <tr><th> Uptime Robot ratio (30 days): </th>
-    <td><img src='https://img.shields.io/uptimerobot/ratio/30/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/uptimerobot/ratio/30/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  <tr><th> Uptime Robot ratio: </th>
+    <td><img src='https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio (7 days): </th>
+    <td><img src='https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg</code></td>
   </tr>
 </tbody></table>
 
