--- a/try.html
+++ b/try.html
@@ -938,9 +938,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
     <td><code>https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg</code></td>
   </tr>
-  <tr><th> Uptime Robot ratio (30 days): </th>
-    <td><img src='/uptimerobot/ratio/30/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
-    <td><code>https://img.shields.io/uptimerobot/ratio/30/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  <tr><th> Uptime Robot ratio: </th>
+    <td><img src='/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio (7 days): </th>
+    <td><img src='/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg</code></td>
   </tr>
 </tbody></table>
 
