Add badges for Uptime Robot (#947)
* numberOfDays optional (default 30) for Uptime Robot ratio
* Require a monitor key, not a user key
* Update gitignore for Jetbrains

--- a/try.html
+++ b/try.html
@@ -946,6 +946,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg' alt=''/></td>
     <td><code>https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg</code></td>
   </tr>
+  <tr><th> Uptime Robot status: </th>
+    <td><img src='/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio: </th>
+    <td><img src='/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio (7 days): </th>
+    <td><img src='/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
