--- a/index.html
+++ b/index.html
@@ -935,6 +935,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/swagger/valid/2.0/https/bitbucket.org/api/swagger.json.svg</code></td>
   </tr>
+  <tr><th> Uptime Robot status: </th>
+    <td><img src='https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/status/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio: </th>
+    <td><img src='https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
+  <tr><th> Uptime Robot ratio (7 days): </th>
+    <td><img src='https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
