Add new badges npm weekly and npm yearly

--- a/try.html
+++ b/try.html
@@ -253,8 +253,16 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/atom-amd64.deb.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
+  <td><img src='/npm/dw/localeval.svg' alt=''/></td>
+  <td><code>https://img.shields.io/npm/dw/localeval.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/dm/localeval.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm: </th>
+  <td><img src='/npm/dy/localeval.svg' alt=''/></td>
+  <td><code>https://img.shields.io/npm/dy/localeval.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='/npm/dt/express.svg' alt=''/></td>
