--- a/index.html
+++ b/index.html
@@ -254,8 +254,16 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/atom-amd64.deb.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
+  <td><img src='https://img.shields.io/npm/dw/localeval.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/npm/dw/localeval.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm: </th>
   <td><img src='https://img.shields.io/npm/dm/localeval.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/npm/dm/localeval.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> npm: </th>
+  <td><img src='https://img.shields.io/npm/dy/localeval.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/npm/dy/localeval.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='https://img.shields.io/npm/dt/express.svg?maxAge=2592000' alt=''/></td>
@@ -489,8 +497,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/hexpm/v/plug.svg</code></td>
   </tr>
   <tr><th data-doc='githubDoc'> GitHub tag: </th>
-  <td><img src='https://img.shields.io/github/tag/strongloop/express.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/github/tag/strongloop/express.svg</code></td>
+  <td><img src='https://img.shields.io/github/tag/expressjs/express.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/github/tag/expressjs/express.svg</code></td>
   </tr>
   <tr><th data-doc='githubDoc'> GitHub release: </th>
   <td><img src='https://img.shields.io/github/release/qubyte/rubidium.svg?maxAge=2592000' alt=''/></td>
@@ -725,8 +733,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/cpan/l/Config-Augeas.svg</code></td>
   </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
-    <td><img src='https://img.shields.io/ctan/l/tex.svg?maxAge=2592000' alt='' /></td>
-    <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
+    <td><img src='https://img.shields.io/ctan/l/novel.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/ctan/l/novel.svg</code></td>
   </tr>
   <tr><th> Wheelmap: </th>
     <td><img src='https://img.shields.io/wheelmap/a/2323004600.svg?maxAge=2592000' alt='' /></td>
@@ -936,12 +944,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
 <table class='badge'><tbody>
   <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/strongloop/express.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/david/strongloop/express.svg</code></td>
+    <td><img src='https://img.shields.io/david/expressjs/express.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/david/expressjs/express.svg</code></td>
   </tr>
   <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/dev/strongloop/express.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
+    <td><img src='https://img.shields.io/david/dev/expressjs/express.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/david/dev/expressjs/express.svg</code></td>
   </tr>
   <tr><th> David: </th>
     <td><img src='https://img.shields.io/david/optional/elnounch/byebye.svg?maxAge=2592000' alt=''/></td>
@@ -988,19 +996,19 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg</code></td>
   </tr>
   <tr><th> Issue Stats: </th>
-  <td><img src='https://img.shields.io/issuestats/i/github/strongloop/express.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/issuestats/i/github/strongloop/express.svg</code></td>
+  <td><img src='https://img.shields.io/issuestats/i/github/expressjs/express.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/issuestats/i/github/expressjs/express.svg</code></td>
   </tr>
   <tr><th> (long form): </th>
   <td>&nbsp;</td>
-  <td><code>https://img.shields.io/issuestats/i/long/github/strongloop/express.svg</code></td>
+  <td><code>https://img.shields.io/issuestats/i/long/github/expressjs/express.svg</code></td>
   </tr>
   <tr><th> Issue Stats: </th>
-  <td><img src='https://img.shields.io/issuestats/p/github/strongloop/express.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/issuestats/p/github/strongloop/express.svg</code></td>
+  <td><img src='https://img.shields.io/issuestats/p/github/expressjs/express.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/issuestats/p/github/expressjs/express.svg</code></td>
   <tr><th> (long form): </th>
   <td>&nbsp;</td>
-  <td><code>https://img.shields.io/issuestats/p/long/github/strongloop/express.svg</code></td>
+  <td><code>https://img.shields.io/issuestats/p/long/github/expressjs/express.svg</code></td>
   </tr>
   <tr><th> Libraries.io for releases: </th>
     <td><img src='https://img.shields.io/librariesio/release/hex/phoenix/1.0.3.svg?maxAge=2592000' alt=''/></td>
