Update try.html file

--- a/try.html
+++ b/try.html
@@ -507,6 +507,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
+  <tr><th data-doc='githubDoc'> GitHub (pre-)release: </th>
+  <td><img src='/github/release/qubyte/rubidium/all.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/release/qubyte/rubidium/all.svg</code></td>
+  </tr>
   <tr><th data-doc='githubDoc'> GitHub commits: </th>
   <td><img src='/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg</code></td>
