--- a/try.html
+++ b/try.html
@@ -405,8 +405,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='website' data-doc='websiteDoc'> Website: </th>
-    <td><img src='/website-up-down-green-red-my--website/http/shields.io.svg' alt=''/></td>
-    <td><code>https://img.shields.io/website-up-down-green-red-my--website/http/shields.io.svg</code></td>
+    <td><img src='/website-up-down-green-red/http/shields.io.svg?label=my-website' alt=''/></td>
+    <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg?label=my-website</code></td>
   </tr>
   <tr><th data-keywords='cocoapods'> CocoaPods: </th>
     <td><img src='/cocoapods/dt/AFNetworking.svg' alt='' /></td>
@@ -1229,16 +1229,10 @@ is where the current server got started.
       <ul>
         <li>Nothing:
             <code>…/website/…</code></li>
-        <li>Badge label (displayed in the left part of the badge):
-            <code>…/website-label/…</code></li>
         <li>Online and offline text:
             <code>…/website-up-down/…</code></li>
-        <li>Online and offline text, then badge label:
-            <code>…/website-up-down-label/…</code></li>
         <li>Online and offline text, then online and offline colors:
             <code>…/website-up-down-green-orange/…</code></li>
-        <li>Online and offline text, then online and offline colors, then badge label:
-            <code>…/website-up-down-green-orange-label/…</code></li>
       </ul>
       <table class=centered><tbody>
           <tr><td>   Dashes <code>--</code>
