--- a/try.html
+++ b/try.html
@@ -969,6 +969,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg' alt=''/></td>
     <td><code>https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg</code></td>
   </tr>
+  <tr><th> Discord: </th>
+    <td><img src='/discord/102860784329052160.svg' alt=''/></td>
+    <td><code>https://img.shields.io/discord/102860784329052160.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
