--- a/try.html
+++ b/try.html
@@ -1060,6 +1060,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/osslifecycle/Netflix/osstracker.svg' alt=''/></td>
     <td><code>https://img.shields.io/osslifecycle/Netflix/osstracker.svg</code></td>
   </tr>
+  <tr><th> Sourcegraph for Repo Reference Count: </th>
+    <td><img src='https://img.shields.io/sourcegraph/rrc//github.com/gorilla/mux.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sourcegraph/rrc/github.com/gorilla/mux.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
