--- a/try.html
+++ b/try.html
@@ -311,6 +311,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/pypi/dd/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dd/Django.svg</code></td>
   </tr>
+  <tr><th data-keywords='conda'> Conda: </th>
+  <td><img src='/conda/dn/conda-forge/python.svg' alt=''/></td>
+  <td><code>https://img.shields.io/conda/dn/conda-forge/python.svg</code></td>
+  </tr>
   <tr><th data-keywords='Rust'> Crates.io: </th>
   <td><img src='/crates/d/rustc-serialize.svg' alt=''/></td>
   <td><code>https://img.shields.io/crates/d/rustc-serialize.svg</code></td>
@@ -461,6 +465,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='/pypi/v/nine.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/v/nine.svg</code></td>
+  </tr>
+  <tr><th data-keywords='conda'> Conda: </th>
+  <td><img src='/conda/v/conda-forge/python.svg' alt=''/></td>
+  <td><code>https://img.shields.io/conda/v/conda-forge/python.svg</code></td>
+  </tr>
+  <tr><th data-keywords='conda'> Conda (channel only): </th>
+  <td><img src='/conda/vn/conda-forge/python.svg' alt=''/></td>
+  <td><code>https://img.shields.io/conda/vn/conda-forge/python.svg</code></td>
   </tr>
   <tr><th data-keywords='ruby'> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt=''/></td>
@@ -1020,6 +1032,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> CocoaPods: </th>
     <td><img src='/cocoapods/metrics/doc-percent/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/metrics/doc-percent/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='conda'> Conda: </th>
+    <td><img src='/conda/pn/conda-forge/python.svg' alt=''/></td>
+    <td><code>https://img.shields.io/conda/pn/conda-forge/python.svg</code></td>
   </tr>
   <tr><th> Ansible Role: </th>
     <td><img src='/ansible/role/3078.svg' alt=''/></td>
