--- a/try.html
+++ b/try.html
@@ -762,6 +762,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-raw/badges/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
+    <tr><th data-keywords='GitHub issue' data-doc='githubDoc'></th>
+    <td><img src='/github/issues-state/badges/shields/1.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-state/badges/shields/1.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub issue' data-doc='githubDoc'> GitHub closed issues: </th>
     <td><img src='/github/issues-closed/badges/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-closed/badges/shields.svg</code></td>
