--- a/try.html
+++ b/try.html
@@ -555,8 +555,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/puppetforge/v/vStone/percona.svg</code></td>
   </tr>
   <tr><th> Maven Central: </th>
-  <td><img src='/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
-  <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
+  <td><img src='/maven-central/v/org.apache.maven/apache-maven/3.svg' alt=''/></td>
+  <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven/3.svg</code></td>
   </tr>
   <tr><th> WordPress plugin: </th>
   <td><img src='/wordpress/plugin/v/akismet.svg' alt=''/></td>
