github "star" -> "stars"

--- a/try.html
+++ b/try.html
@@ -619,8 +619,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social&amp;label=Fork</code></td>
   </tr>
   <tr><th data-doc='githubDoc'> GitHub stars: </th>
-  <td><img src='/github/stars/badges/shields.svg?style=social&label=Star' alt=''/></td>
-  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social&amp;label=Star</code></td>
+  <td><img src='/github/stars/badges/shields.svg?style=social&label=Stars' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social&amp;label=Stars</code></td>
   </tr>
   <tr><th data-doc='githubDoc'> GitHub watchers: </th>
   <td><img src='/github/watchers/badges/shields.svg?style=social&label=Watch' alt=''/></td>
