--- a/try.html
+++ b/try.html
@@ -543,6 +543,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/release-name/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release-name/qubyte/rubidium.svg</code></td>
   </tr>
+  </tr>
+  <tr><th data-doc='githubDoc'> GitHub release + name + raw: </th>
+  <td><img src='/github/release-name-raw/qubyte/rubidium.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/release-name-raw/qubyte/rubidium.svg</code></td>
+  </tr>
   <tr><th data-doc='githubDoc'> GitHub (pre-)release: </th>
   <td><img src='/github/release/qubyte/rubidium/all.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium/all.svg</code></td>
@@ -551,6 +556,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-doc='githubDoc'> GitHub (pre-)release + name: </th>
   <td><img src='/github/release-name/qubyte/rubidium/all.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release-name/qubyte/rubidium/all.svg</code></td>
+  </tr>
+  </tr>
+  <tr><th data-doc='githubDoc'> GitHub (pre-)release + name + raw: </th>
+  <td><img src='/github/release-name-raw/qubyte/rubidium/all.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/release-name-raw/qubyte/rubidium/all.svg</code></td>
   </tr>
   <tr><th data-doc='githubDoc'> GitHub commits: </th>
   <td><img src='/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg' alt=''/></td>
