Add dockbit.com badge

--- a/try.html
+++ b/try.html
@@ -232,6 +232,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
     <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
   </tr>
+  <tr><th> Dockbit: </th>
+      <td><img src='/dockbit/DockbitStatus/health.svg?token=TvavttxFHJ4qhnKstDxrvBXM' alt=''/></td>
+      <td><code>https://img.shields.io/dockbit/ORGANIZATION_NAME/PIPELINE_NAME.svg?token=PIPELINE_TOKEN</code></td>
+  </tr>
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
