Updating examples with PowerShell Gallery

--- a/try.html
+++ b/try.html
@@ -299,6 +299,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/dotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg' alt=''/></td>
   <td><code>https://img.shields.io/dotnet.myget/dotnet-coreclr/dt/Microsoft.DotNet.CoreCLR.svg</code></td>
   </tr>
+  <tr><th> PowerShell Gallery: </th>
+  <td><img src='/powershellgallery/dt/ACMESharp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/powershellgallery/dt/ACMESharp.svg</code></td>
+  </tr>
   <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='/pypi/dm/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dm/Django.svg</code></td>
@@ -549,6 +553,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Chocolatey: </th>
   <td><img src='/chocolatey/v/git.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/v/git.svg</code></td>
+  </tr>
+  <tr><th> PowerShell Gallery: </th>
+  <td><img src='/powershellgallery/v/Zyborg.Vault.svg' alt=''/></td>
+  <td><code>https://img.shields.io/powershellgallery/v/Zyborg.Vault.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
   <td><img src='/puppetforge/v/vStone/percona.svg' alt=''/></td>
