Add codesponsor badge

--- a/try.html
+++ b/try.html
@@ -670,6 +670,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/beerpay/hashdog/scrapfy-chrome-extension.svg' alt=''/></td>
     <td><code>https://img.shields.io/beerpay/hashdog/scrapfy-chrome-extension.svg</code></td>
   </tr>
+  <tr><th> Code Sponsor: </th>
+    <td><img src='/codesponsor/hopsoft/bg.svg' alt='Code Sponsor'/></td>
+    <td><code>https://img.shields.io/codesponsor/hopsoft/bg.svg</code></td>
+  </tr>
   <tr><th> Code Climate: </th>
     <td><img src='/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
