Add JitPack version badge; fixes #900

--- a/try.html
+++ b/try.html
@@ -638,6 +638,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
     <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
   </tr>
+  <tr><th data-keywords='jitpack java maven'> JitPack: </th>
+    <td><img src='/jitpack/v/jitpack/maven-simple.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jitpack/v/jitpack/maven-simple.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
