added continuousphp integration

--- a/try.html
+++ b/try.html
@@ -236,6 +236,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='/dockbit/DockbitStatus/health.svg?token=TvavttxFHJ4qhnKstDxrvBXM' alt=''/></td>
       <td><code>https://img.shields.io/dockbit/ORGANIZATION_NAME/PIPELINE_NAME.svg?token=PIPELINE_TOKEN</code></td>
   </tr>
+  <tr><th> continuousphp: </th>
+    <td><img src='/continuousphp/git-hub/doctrine/dbal/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/continuousphp/doctrine/dbal/master.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
