Add support for Sqreen badges

--- a/try.html
+++ b/try.html
@@ -997,6 +997,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/discord/102860784329052160.svg' alt=''/></td>
     <td><code>https://img.shields.io/discord/102860784329052160.svg</code></td>
   </tr>
+  <tr><th> Sqreen: </th>
+    <td><img src='/sqreen/https://www.sqreen.io.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sqreen/https://www.sqreen.io.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
