route changed to /vscode-marketplace/d|r|v/*

--- a/try.html
+++ b/try.html
@@ -443,9 +443,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/amo/d/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
-  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
-    <td><img src='/vscode/installs/ritwickdey.LiveServer.svg' alt=''/></td>
-    <td><code>https://img.shields.io/vscode/installs/ritwickdey.LiveServer.svg</code></td>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/d/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/d/ritwickdey.LiveServer.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
@@ -634,9 +634,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/amo/v/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
-  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
-    <td><img src='/vscode/version/ritwickdey.LiveServer.svg' alt=''/></td>
-    <td><code>https://img.shields.io/vscode/version/ritwickdey.LiveServer.svg</code></td>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/v/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/v/ritwickdey.LiveServer.svg</code></td>
   </tr>
   <tr><th> Itunes App Store: </th>
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
@@ -1005,9 +1005,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/discord/102860784329052160.svg' alt=''/></td>
     <td><code>https://img.shields.io/discord/102860784329052160.svg</code></td>
   </tr>
-  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
-    <td><img src='/vscode/rating/ritwickdey.LiveServer.svg' alt=''/></td>
-    <td><code>https://img.shields.io/vscode/rating/ritwickdey.LiveServer.svg</code></td>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/r/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/r/ritwickdey.LiveServer.svg</code></td>
   </tr>
 </tbody></table>
 
