allow more than just version from manifest/package
Update try.html with manifest and package example
add `-json` to the url
add `v` to the url to allow for other options such as `n`, `name`,
`licence` etc.
changed left label from `development` to `manifest`/`package` dependant
on type/info requested
changed to standard request from githubAuth.request

--- a/try.html
+++ b/try.html
@@ -534,10 +534,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/tag/expressjs/express.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/tag/expressjs/express.svg</code></td>
   </tr>
-  <tr><th data-doc='githubDoc'> GitHub development: </th>
-  <td><img src='/github/package/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/package/badges/shields.svg</code></td>
+  <tr><th data-doc='githubDoc'> GitHub package version: </th>
+  <td><img src='/github/package-json/v/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/package-json/v/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-doc='githubDoc'> GitHub manifest version: </th>
+  <td><img src='/github/manifest-json/v/RedSparr0w/IndieGala-Helper.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/manifest-json/v/RedSparr0w/IndieGala-Helper.svg</code></td>
   <tr><th data-doc='githubDoc'> GitHub release: </th>
   <td><img src='/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
