Discord social button added at very bottom of the page (#1096)
Close #985

--- a/try.html
+++ b/try.html
@@ -1249,6 +1249,7 @@ And tell us, we might be able to bring it to you anyway!
 <iframe src="https://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
   width="95" height="20"></iframe>
+<a href="https://discord.gg/HjJCwm5"><img src="/discord/308323056592486420.svg?style=social&label=Chat" alt="chat on Discord"></a>
 </p>
 <p>
 <a href='https://github.com/h5bp/lazyweb-requests/issues/150'>This</a>
