Add support for sonatype nexus (#1017)
Close #783

--- a/try.html
+++ b/try.html
@@ -598,6 +598,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/maven-central/v/org.apache.maven/apache-maven/2.svg' alt=''/></td>
   <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven/2.svg</code></td>
   </tr>
+  <tr><th> Sonatype Nexus (Releases): </th>
+  <td><img src='/nexus/r/https/oss.sonatype.org/com.google.guava/guava.svg' alt=''/></td>
+  <td><code>https://img.shields.io/nexus/r/https/oss.sonatype.org/com.google.guava/guava.svg</code></td>
+  </tr>
+  <tr><th> Sonatype Nexus (Snapshots): </th>
+  <td><img src='/nexus/s/https/oss.sonatype.org/com.google.guava/guava.svg' alt=''/></td>
+  <td><code>https://img.shields.io/nexus/s/https/oss.sonatype.org/com.google.guava/guava.svg</code></td>
+  </tr>
   <tr><th> WordPress plugin: </th>
   <td><img src='/wordpress/plugin/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
