Rewrite commit-activity

--- a/try.html
+++ b/try.html
@@ -881,9 +881,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/commits/google/skia/infra/config/last.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub commits for' data-doc='githubDoc'> GitHub commits for last (week, month, year) </th>
-    <td><img src='/github/stats/google/skia/year.svg' alt=''/></td>
-    <td><code>https://img.shields.io/github/stats/google/skia/year.svg</code></td>
+  <tr><th data-keywords='GitHub commit commits activity' data-doc='githubDoc'> GitHub commit activity the past week, 4 weeks, year </th>
+    <td><img src='/github/commit-activity/y/eslint/eslint.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/commit-activity/y/eslint/eslint.svg</code></td>
   </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
