--- a/try.html
+++ b/try.html
@@ -873,17 +873,17 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='GitHub search hit counter' data-doc='githubDoc'> Github search hit counter: </th>
     <td><img src='/github/search/torvalds/linux/goto.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/search/torvalds/linux/goto.svg</code></td>
-  <tr><th data-keywords='GitHub lastcommit' data-doc='githubDoc'> GitHub last commit date: </th>
-    <td><img src='/github/commits/google/skia/last.svg' alt=''/></td>
-    <td><code>https://img.shields.io/github/commits/google/skia/last.svg</code></td>
-  </tr>
-  <tr><th data-keywords='GitHub lastcommit' data-doc='githubDoc'> GitHub last commit date branch: </th>
-    <td><img src='/github/commits/google/skia/infra/config/last.svg' alt=''/></td>
-    <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
-  </tr>
   <tr><th data-keywords='GitHub commit commits activity' data-doc='githubDoc'> GitHub commit activity the past week, 4 weeks, year </th>
     <td><img src='/github/commit-activity/y/eslint/eslint.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/commit-activity/y/eslint/eslint.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub last latest commit' data-doc='githubDoc'> GitHub last commit: </th>
+    <td><img src='/github/last-commit/google/skia.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/commits/google/skia/last.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub last latest commit' data-doc='githubDoc'> GitHub last commit (branch): </th>
+    <td><img src='/github/last-commit/google/skia/infra/config.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
   </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
