Normalise "AppVeyor tests:"

--- a/try.html
+++ b/try.html
@@ -104,7 +104,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/appveyor/ci/gruntjs/grunt/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/appveyor/ci/gruntjs/grunt/master.svg</code></td>
   </tr>
-  <tr><th> AppVeyor Tests: </th>
+  <tr><th> AppVeyor tests: </th>
     <td><img src='/appveyor/tests/NZSmartie/coap-net-iu0to.svg' alt=''/></td>
     <td><code>https://img.shields.io/appveyor/tests/NZSmartie/coap-net-iu0to.svg</code></td>
   </tr>
