[Bower] Add tests and prerelease badge (#1099)

--- a/try.html
+++ b/try.html
@@ -538,6 +538,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/bower/v/bootstrap.svg' alt='' /></td>
   <td><code>https://img.shields.io/bower/v/bootstrap.svg</code></td>
   </tr>
+  <tr><th> Bower Pre Release: </th>
+  <td><img src='/bower/vpre/bootstrap.svg' alt='' /></td>
+  <td><code>https://img.shields.io/bower/vpre/bootstrap.svg</code></td>
+  </tr>
   <tr><th> Pub: </th>
   <td><img src='/pub/v/box2d.svg' alt=''/></td>
   <td><code>https://img.shields.io/pub/v/box2d.svg</code></td>
