pr updates and api updates

--- a/try.html
+++ b/try.html
@@ -1010,8 +1010,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
   </tr>
   <tr><th>.Net Status (GitHub):</th>
-    <td><img src='/dotnetstatus/gh/jaredcnance/dotnet-status/master/dotnet-status.csproj.svg' alt=''/></td>
-    <td><code>https://img.shields.io/dotnetstatus/gh/jaredcnance/dotnet-status/master/dotnet-status.csproj.svg</code></td>
+    <td><img src='/dotnetstatus/gh/jaredcnance/dotnet-status/API.svg' alt='' /></td>
+    <td><code>https://img.shields.io/dotnetstatus/gh/jaredcnance/dotnet-status/API.svg</code></td>
   </tr>
   <tr><th> bitHound: </th>
     <td><img src='/bithound/dependencies/github/rexxars/sse-channel.svg' alt=''/></td>
